Added persistence classes, dao & service layers. Fixed configuration class. Changed composite primary key for GroupSubject. Changed some methods in Query class to be used with entity manager.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
 # Database
-db.driver:com.mysql.jdbc.Driver
-db.url:jdbc:mysql://localhost:3306/tm?useSSL=false
+db.driver:org.firebirdsql.jdbc.FBDriver
+db.url:jdbc:firebirdsql://localhost/C:/Workspace/DiplomaAddition/DEKANAT.fdb?charSet=windows-1251
 db.username:SYSDBA
 db.password:masterkey
 # Hibernate
 hibernate.dialect:org.hibernate.dialect.FirebirdDialect
 hibernate.show_sql:false
-#hibernate.hbm2ddl.auto:update
-entityManager.packagesToScan:com.chdtu.fitis.dipladd
+entityManager.packagesToScan:com.chdtu.fitis.dipladd.entity
 # MVC
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
