Changed database location.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver:org.firebirdsql.jdbc.FBDriver
-db.url:jdbc:firebirdsql://localhost/D:/Workspace/DiplomaAddition/DEKANAT.fdb?charSet=windows-1251
+db.url:jdbc:firebirdsql://localhost/D:/Workspace/DEKANAT.fdb?charSet=windows-1251
 db.username:SYSDBA
 db.password:masterkey
 # Hibernate
