Added UI. Some refactoring done.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database
 db.driver:org.firebirdsql.jdbc.FBDriver
-db.url:jdbc:firebirdsql://localhost/D:/Workspace/DEKANAT.fdb?charSet=windows-1251
+db.url:jdbc:firebirdsql://localhost/C:/Workspace/DEKANAT.fdb?charSet=windows-1251
 db.username:SYSDBA
 db.password:masterkey
 # Hibernate
@@ -13,6 +13,4 @@ spring.mvc.view.suffix=.jsp
 # Server
 server.port=8080
 server.error.whitelabel.enabled=true
-#logging.level.org.springframework.web=debug
-#logging.level.org.springframework.security=debug
-#logging.level.org.hibernate=debug
+server.tomcat.uri-encoding=UTF-8
